some changes in gallery items

--- a/html/index.html
+++ b/html/index.html
@@ -120,7 +120,7 @@
 
     <!-- gallary page started here -->
     <div class="galary-content" id="galary-content">
-      <span class="display-4">Galary</span>
+      <span class="display-4">Gallery</span>
       <div class="container">
         <div id="carousel2" class="carousel slide">
           <div class="carousel-inner">
@@ -158,20 +158,20 @@
             </div>
 
             <!-- fifth items -->
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <div id="fifth-galary-image">
                 <img src="../block/cosmic-paver-basic-block-design2.jpeg" class="card-img-top "
                   alt="cosmic paver block design" id="zigzag-card-design">
               </div>
-            </div>
+            </div> -->
 
             <!-- sixth items -->
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <div id="sixth-galary-image">
                 <img src="../block/cosmic-paver-basic-block-design3.png" class="card-img-top "
                   alt="cosmic paver block design" id="zigzag-card-design">
               </div>
-            </div>
+            </div> -->
 
             <!-- seventh items -->
             <div class="carousel-item">
@@ -213,6 +213,7 @@
               </div>
             </div>
           </div>
+
           <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -265,6 +266,7 @@
           <p> Address:<strong>Sidsar-Budhel Bypass Road,Near Lakhanaka Dam,Sidsar,Bhavnagar-364060</strong>
           </p>
           <p><a class="contact-mail" href="mailto:prakashmojidra1979@gmail.com">Mail Us</a></p>
+          <p>Developed or Maintained By Yagnik Mojidra</p>
         </div>
       </div>
     </footer>
